# LLM-reasoning-sudoku

./: pyproject.toml
mctot/: __init__.py
mctot/core/: __init__.py  board.py  checker.py  state.py
mctot/experts/: __init__.py  base.py  got_expert.py  lstm_tot_expert.py  mcts_expert.py  registry.py  tot_expert.py
mctot/moe/: __init__.py  gate.py  manager.py  mixture.py
