[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mctot"
version = "0.1.0"
description = "Mixture-of-Experts orchestration over sudoku-solving strategies (MCTS, ToT, LSTM-ToT, GoT)."
requires-python = ">=3.10"
dependencies = [
    "langchain==0.3.9",
    "langchain_core==0.3.21",
    "langchain_ollama==0.2.1",
    "langchain_openai==0.2.10",
    "numpy==2.1.3",
    "openai==1.56.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "Requests==2.32.3",
]

[tool.setuptools.packages.find]
include = ["mctot*"]
